# Neural-Texture-Compression

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  vcpkg.json
assets/: helmet.mtl
assets/export/: ntc.pt
assets/export/runtime/: ntc.json
assets/source/: helmet2.mtl
runtime/: Camera.cpp  Camera.h  Debug.h  FileSystem.cpp  FileSystem.h  MLPDecoder.cpp  MLPDecoder.h  ShaderCompiler.cpp  ShaderCompiler.h  VulkanState.cpp  VulkanState.h  Window.cpp  Window.h  main.cpp  stb_image.c  vk_mem_alloc.cpp
runtime/shaders/: ShaderIO.slang  Utils.slang  deferred_neural.slang  deferred_neural_coopmat.slang  deferred_neural_coopvec.slang  forward.slang  forward_neural.slang  gbuffer.slang  reconstruct.slang  shaders.json  skybox.slang
runtime/shaders/ShaderIO/: CMakeLists.txt  global_io.slang
runtime/shaders/Utils/: utils_brdf.slang  utils_ibl.slang  utils_ntc.slang
trainer/: latent_texture.py  mlp.py  train.py
